<resources>
    <string name="app_name">Cow</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="or">OR</string>
    <string name="login_id">Login ID</string>
    <string name="todo">TODO</string>
    <string name="camera">Camera</string>
    <string name="list">List</string>
    <string name="tag_number">Tag Number</string>
</resources>
