<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginLayout"
    android:layout_width="match_parent"
    android:background="@color/cardview_light_background"
    android:layout_height="match_parent"
    tools:context=".Uis.Login"
    tools:ignore="PrivateResource">



    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent=".5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="20dp"
        app:layout_constraintWidth_percent=".85">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:id="@+id/image_logo"
            android:background="@drawable/images"
            android:contentDescription="@string/todo"
            android:layout_marginBottom="20dp"
            />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/loginIdTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <EditText
                android:id="@+id/loginId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_id"
                android:padding="10dp"
                android:importantForAutofill="no"
                />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:importantForAutofill="no" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button_login"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_corner_radius"
            android:backgroundTint="@color/colorGreen"
            android:layout_marginTop="20dp"
            android:text="@string/login"
            android:textColor="@color/cardview_light_background"
            android:textStyle="bold"
            tools:ignore="PrivateResource" />

        <TextView
            android:id="@+id/registerText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/or"
            android:padding="10dp" />

        <Button
            android:id="@+id/button_SignIn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textColor="@color/cardview_light_background"
            android:background="@drawable/button_corner_radius"
            android:backgroundTint="@color/colorGreen"
            android:text="@string/sign_up"
            android:textStyle="bold"
            tools:ignore="PrivateResource" />



    </LinearLayout>



    <ProgressBar
        android:id="@+id/webViewProgressBar2"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:visibility="gone"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>


